<resources>
    <string name="app_name">KotlinJournal</string>

    <string name="birthday_app">Birthday Card</string>
    <string name="happy_birthday_zoe">Happy Birthday, Zoe!</string>
    <string name="from_brandon">From, Brandon.</string>
    <string name="cupcake_background_cd">Cupcake Background</string>

    <string name="dice_roller_app">Dice Roller</string>
    <string name="roll">Roll</string>

    <string name="lemonade_app">Lemonade</string>
    <string name="lemon_select">Click to select a lemon!</string>
    <string name="lemon_squeeze">Click to juice the lemon!</string>
    <string name="lemon_drink">Click to drink your lemonade!</string>
    <string name="lemon_empty_glass">Click to start again!</string>
    <string name="squeeze_count">Squeeze count: %1$d, keep squeezing!</string>

    <string name="tip_time_app">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>

    <string name="affirmations_app">Affirmations</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>

    <string name="dogglers_app">Dogglers</string>
    <string name="dog_age">Age: %1$s</string>
    <string name="dog_hobbies">Hobbies: %1$s</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="grid">Grid</string>
    <string name="dog_image">Dog image</string>

    <string name="unscramble_app">Unscramble</string>
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d of %d words</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try again!</string>

</resources>