<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/birthday_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/birthday_app"
            android:layout_marginTop="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dice_roll_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/dice_roller_app"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/birthday_btn"
            app:layout_constraintStart_toStartOf="@id/birthday_btn"/>

        <Button
            android:id="@+id/lemonade_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/lemonade_app"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/dice_roll_btn"
            app:layout_constraintStart_toStartOf="@id/birthday_btn" />

        <Button
            android:id="@+id/tip_time_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/tip_time_app"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/lemonade_btn"
            app:layout_constraintStart_toStartOf="@id/birthday_btn" />

        <Button
            android:id="@+id/affirmations_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/affirmations_app"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/tip_time_btn"
            app:layout_constraintStart_toStartOf="@id/birthday_btn" />

        <Button
            android:id="@+id/dogglers_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/dogglers_app"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/affirmations_btn"
            app:layout_constraintStart_toStartOf="@id/birthday_btn" />

        <Button
            android:id="@+id/unscramble_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/unscramble_app"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/dogglers_btn"
            app:layout_constraintStart_toStartOf="@id/birthday_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>